--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  firebase_auth:
+  cloud_firestore: ^0.12.9+4
+  provider: ^5.0.0
+
 
 dev_dependencies:
   flutter_test:
